{
  "version": 4,
  "terraform_version": "1.15.1",
  "serial": 71,
  "lineage": "ea7a025b-976d-0a6a-6567-b08d53378801",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bb26f3c35206d22d",
            "arn": "arn:aws:ec2:us-east-1:390449413955:instance/i-0475c5db61d36d9c4",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0475c5db61d36d9c4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "taskflow-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0659cb3fc64ad8663",
            "private_dns": "ip-10-0-1-190.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.190",
            "public_dns": "ec2-13-220-241-109.compute-1.amazonaws.com",
            "public_ip": "13.220.241.109",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags_all": {
                  "ManagedBy": "terraform",
                  "Project": "taskflow"
                },
                "throughput": 125,
                "volume_id": "vol-0a28d255be536d4ec",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-043f5b9a7281a61ee",
            "tags": {
              "Name": "taskflow-bastion",
              "Role": "bastion"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "taskflow-bastion",
              "Project": "taskflow",
              "Role": "bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c8c132bc1cfbd687"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.main",
            "aws_security_group.bastion",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux_2",
            "data.aws_availability_zones.available",
            "tls_private_key.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bb26f3c35206d22d",
            "arn": "arn:aws:ec2:us-east-1:390449413955:instance/i-0db72bd92f44cdeae",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "taskflow-jenkins",
            "id": "i-0db72bd92f44cdeae",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "taskflow-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0432d39af43ddfb95",
            "private_dns": "ip-10-0-1-90.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.90",
            "public_dns": "ec2-98-81-108-73.compute-1.amazonaws.com",
            "public_ip": "98.81.108.73",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags_all": {
                  "ManagedBy": "terraform",
                  "Project": "taskflow"
                },
                "throughput": 125,
                "volume_id": "vol-0ebe42f20d1376b86",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-043f5b9a7281a61ee",
            "tags": {
              "Name": "taskflow-jenkins",
              "Role": "jenkins"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "taskflow-jenkins",
              "Project": "taskflow",
              "Role": "jenkins"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-0d4d2b6863deec774"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.jenkins",
            "aws_iam_role.jenkins",
            "aws_key_pair.main",
            "aws_security_group.bastion",
            "aws_security_group.jenkins",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux_2",
            "data.aws_availability_zones.available",
            "tls_private_key.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bb26f3c35206d22d",
            "arn": "arn:aws:ec2:us-east-1:390449413955:instance/i-0cfd1088fd97439f7",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "taskflow-ec2-node",
            "id": "i-0cfd1088fd97439f7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "taskflow-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-006e6ba15148e7928",
            "private_dns": "ip-10-0-1-213.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.213",
            "public_dns": "ec2-44-200-236-210.compute-1.amazonaws.com",
            "public_ip": "44.200.236.210",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags_all": {
                  "ManagedBy": "terraform",
                  "Project": "taskflow"
                },
                "throughput": 125,
                "volume_id": "vol-0409618e640f4411f",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-043f5b9a7281a61ee",
            "tags": {
              "Name": "taskflow-k8s-master",
              "Role": "control-plane"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "taskflow-k8s-master",
              "Project": "taskflow",
              "Role": "control-plane"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08a11f5774fc6bb8d"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.ec2_node",
            "aws_iam_role.ec2_node",
            "aws_key_pair.main",
            "aws_security_group.bastion",
            "aws_security_group.control_plane",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux_2",
            "data.aws_availability_zones.available",
            "tls_private_key.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bb26f3c35206d22d",
            "arn": "arn:aws:ec2:us-east-1:390449413955:instance/i-00ad585648fc6a37d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "taskflow-ec2-node",
            "id": "i-00ad585648fc6a37d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "taskflow-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0fdb8d50d421e14d7",
            "private_dns": "ip-10-0-1-209.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.209",
            "public_dns": "ec2-3-238-195-253.compute-1.amazonaws.com",
            "public_ip": "3.238.195.253",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags_all": {
                  "ManagedBy": "terraform",
                  "Project": "taskflow"
                },
                "throughput": 125,
                "volume_id": "vol-0af111b3019e9349f",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-043f5b9a7281a61ee",
            "tags": {
              "Name": "taskflow-k8s-worker-1",
              "Role": "worker"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "taskflow-k8s-worker-1",
              "Project": "taskflow",
              "Role": "worker"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02e79cf3e9c6a2bfd"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.ec2_node",
            "aws_iam_role.ec2_node",
            "aws_key_pair.main",
            "aws_security_group.bastion",
            "aws_security_group.worker",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux_2",
            "data.aws_availability_zones.available",
            "tls_private_key.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390449413955:internet-gateway/igw-0b82005bbfad05423",
            "id": "igw-0b82005bbfad05423",
            "owner_id": "390449413955",
            "tags": {
              "Name": "taskflow-igw"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "taskflow-igw",
              "Project": "taskflow"
            },
            "vpc_id": "vpc-0d38ebca22468b8bf"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:390449413955:loadbalancer/app/taskflow-alb/8cab6770195ae663",
            "arn_suffix": "app/taskflow-alb/8cab6770195ae663",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "taskflow-alb-925838044.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:390449413955:loadbalancer/app/taskflow-alb/8cab6770195ae663",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "taskflow-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-048c1af3f26bf0a4b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-043f5b9a7281a61ee"
              },
              {
                "subnet_id": "subnet-0e3146df81be780ef"
              }
            ],
            "subnets": [
              "subnet-043f5b9a7281a61ee",
              "subnet-0e3146df81be780ef"
            ],
            "tags": {
              "Name": "taskflow-alb"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "taskflow-alb",
              "Project": "taskflow"
            },
            "vpc_id": "vpc-0d38ebca22468b8bf",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:390449413955:listener/app/taskflow-alb/8cab6770195ae663/c05015869af7ac48",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:390449413955:targetgroup/taskflow-frontend/d0b8cf4f94a2b199",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:390449413955:listener/app/taskflow-alb/8cab6770195ae663/c05015869af7ac48",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:390449413955:loadbalancer/app/taskflow-alb/8cab6770195ae663",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "ManagedBy": "terraform",
              "Project": "taskflow"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.frontend",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:390449413955:targetgroup/taskflow-frontend/d0b8cf4f94a2b199",
            "arn_suffix": "targetgroup/taskflow-frontend/d0b8cf4f94a2b199",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:390449413955:targetgroup/taskflow-frontend/d0b8cf4f94a2b199",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:390449413955:loadbalancer/app/taskflow-alb/8cab6770195ae663"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "taskflow-frontend",
            "port": 30080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "taskflow-frontend"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "taskflow-frontend",
              "Project": "taskflow"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0d38ebca22468b8bf"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:390449413955:targetgroup/taskflow-frontend/d0b8cf4f94a2b199-20260624130205198200000005",
            "port": 30080,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:390449413955:targetgroup/taskflow-frontend/d0b8cf4f94a2b199",
            "target_id": "i-00ad585648fc6a37d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.ec2_node",
            "aws_iam_role.ec2_node",
            "aws_instance.worker",
            "aws_key_pair.main",
            "aws_lb_target_group.frontend",
            "aws_security_group.bastion",
            "aws_security_group.worker",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux_2",
            "data.aws_availability_zones.available",
            "tls_private_key.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390449413955:route-table/rtb-054f57379b48c1e64",
            "id": "rtb-054f57379b48c1e64",
            "owner_id": "390449413955",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b82005bbfad05423",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "taskflow-public-rt"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "taskflow-public-rt",
              "Project": "taskflow"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d38ebca22468b8bf"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-053ecf013c04ac814",
            "route_table_id": "rtb-054f57379b48c1e64",
            "subnet_id": "subnet-043f5b9a7281a61ee"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c9f1a2e86ae2be65",
            "route_table_id": "rtb-054f57379b48c1e64",
            "subnet_id": "subnet-0e3146df81be780ef"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390449413955:security-group/sg-048c1af3f26bf0a4b",
            "description": "Internet-facing Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-048c1af3f26bf0a4b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "taskflow-alb",
            "name_prefix": "",
            "owner_id": "390449413955",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "taskflow-alb"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "taskflow-alb",
              "Project": "taskflow"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d38ebca22468b8bf"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390449413955:security-group/sg-0c8c132bc1cfbd687",
            "description": "Bastion host - SSH jump box into the VPC",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c8c132bc1cfbd687",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from operator",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "taskflow-bastion",
            "name_prefix": "",
            "owner_id": "390449413955",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "taskflow-bastion"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "taskflow-bastion",
              "Project": "taskflow"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d38ebca22468b8bf"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "control_plane",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390449413955:security-group/sg-08a11f5774fc6bb8d",
            "description": "Kubernetes control plane",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08a11f5774fc6bb8d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Kubernetes API server",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "SSH from bastion only",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c8c132bc1cfbd687"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "taskflow-k8s-control-plane",
            "name_prefix": "",
            "owner_id": "390449413955",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "taskflow-k8s-control-plane"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "taskflow-k8s-control-plane",
              "Project": "taskflow"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d38ebca22468b8bf"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.bastion",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390449413955:security-group/sg-0d4d2b6863deec774",
            "description": "Jenkins CI server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d4d2b6863deec774",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Jenkins UI - GitHub webhooks + browser access",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [],
                "description": "SSH from bastion only",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c8c132bc1cfbd687"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "taskflow-jenkins",
            "name_prefix": "",
            "owner_id": "390449413955",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "taskflow-jenkins"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "taskflow-jenkins",
              "Project": "taskflow"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d38ebca22468b8bf"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.bastion",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390449413955:security-group/sg-0c08ce21bb9918492",
            "description": "Aurora PostgreSQL - reachable from k8s nodes only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c08ce21bb9918492",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "PostgreSQL from control plane",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08a11f5774fc6bb8d"
                ],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [],
                "description": "PostgreSQL from worker nodes",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02e79cf3e9c6a2bfd"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "taskflow-rds",
            "name_prefix": "",
            "owner_id": "390449413955",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "taskflow-rds"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "taskflow-rds",
              "Project": "taskflow"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d38ebca22468b8bf"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.bastion",
            "aws_security_group.control_plane",
            "aws_security_group.worker",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390449413955:security-group/sg-02e79cf3e9c6a2bfd",
            "description": "Kubernetes worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02e79cf3e9c6a2bfd",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "SSH from bastion only",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c8c132bc1cfbd687"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "taskflow-k8s-worker",
            "name_prefix": "",
            "owner_id": "390449413955",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "taskflow-k8s-worker"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "taskflow-k8s-worker",
              "Project": "taskflow"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d38ebca22468b8bf"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.bastion",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "control_plane_from_worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "All intra-cluster traffic from worker nodes",
            "from_port": 0,
            "id": "sgrule-3741192950",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-08a11f5774fc6bb8d",
            "security_group_rule_id": "sgr-05abd2a3c24a56505",
            "self": false,
            "source_security_group_id": "sg-02e79cf3e9c6a2bfd",
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.bastion",
            "aws_security_group.control_plane",
            "aws_security_group.worker",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "control_plane_ssh_from_jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "SSH from Jenkins (Ansible)",
            "from_port": 22,
            "id": "sgrule-1506140270",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-08a11f5774fc6bb8d",
            "security_group_rule_id": "sgr-0f391fcc540247224",
            "self": false,
            "source_security_group_id": "sg-0d4d2b6863deec774",
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.bastion",
            "aws_security_group.control_plane",
            "aws_security_group.jenkins",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_from_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Frontend NodePort from ALB only",
            "from_port": 30080,
            "id": "sgrule-576914553",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-02e79cf3e9c6a2bfd",
            "security_group_rule_id": "sgr-08c4a41a2fcab7707",
            "self": false,
            "source_security_group_id": "sg-048c1af3f26bf0a4b",
            "timeouts": null,
            "to_port": 30080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.bastion",
            "aws_security_group.worker",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_from_control_plane",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "All intra-cluster traffic from control plane",
            "from_port": 0,
            "id": "sgrule-1383132254",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-02e79cf3e9c6a2bfd",
            "security_group_rule_id": "sgr-00878c8074b81bb3c",
            "self": false,
            "source_security_group_id": "sg-08a11f5774fc6bb8d",
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.bastion",
            "aws_security_group.control_plane",
            "aws_security_group.worker",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ssh_from_jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "SSH from Jenkins (Ansible)",
            "from_port": 22,
            "id": "sgrule-301560519",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-02e79cf3e9c6a2bfd",
            "security_group_rule_id": "sgr-03155bf8e3e6aa3a5",
            "self": false,
            "source_security_group_id": "sg-0d4d2b6863deec774",
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.bastion",
            "aws_security_group.jenkins",
            "aws_security_group.worker",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390449413955:subnet/subnet-084da94f51b952101",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-084da94f51b952101",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "390449413955",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "taskflow-private-1"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "taskflow-private-1",
              "Project": "taskflow"
            },
            "vpc_id": "vpc-0d38ebca22468b8bf"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390449413955:subnet/subnet-0546300cf54704114",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0546300cf54704114",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "390449413955",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "taskflow-private-2"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "taskflow-private-2",
              "Project": "taskflow"
            },
            "vpc_id": "vpc-0d38ebca22468b8bf"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390449413955:subnet/subnet-043f5b9a7281a61ee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-043f5b9a7281a61ee",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "390449413955",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "taskflow-public-1"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "taskflow-public-1",
              "Project": "taskflow"
            },
            "vpc_id": "vpc-0d38ebca22468b8bf"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390449413955:subnet/subnet-0e3146df81be780ef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e3146df81be780ef",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "390449413955",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "taskflow-public-2"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "taskflow-public-2",
              "Project": "taskflow"
            },
            "vpc_id": "vpc-0d38ebca22468b8bf"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390449413955:vpc/vpc-0d38ebca22468b8bf",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-034594451ba40bc7f",
            "default_route_table_id": "rtb-0f8375608dedeac72",
            "default_security_group_id": "sg-0275b679fdfcb6896",
            "dhcp_options_id": "dopt-0ffa414e349bc4bf6",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d38ebca22468b8bf",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f8375608dedeac72",
            "owner_id": "390449413955",
            "tags": {
              "Name": "taskflow-vpc"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "taskflow-vpc",
              "Project": "taskflow"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}